name:                pia-forward
version:             0.1.0.0
synopsis:            Set up port forwarding with the Private Internet Access
                     VPN service.
description:         Sets up and maintains a forwarded port. See https://www.privateinternetaccess.com/forum/discussion/180/port-forwarding-without-the-application-advanced-users.
license:             GPL-3
license-file:        LICENSE
author:              Echo Nolan
maintainer:          echo@echonolan.net
copyright:           Copyright 2015 Echo Nolan
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable pia-forward
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8, bytestring == 0.10.*,
                       data-default == 0.5.*, extra == 1.*,
                       http-client == 0.4.7.*, http-client-tls == 0.2.*,
                       network-info == 0.2.*, process == 1.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:          OverloadedStrings, ScopedTypeVariables

source-repository head
  type:                git
  location:            https://github.com/enolan/pia-forward.git
