name:                pia-forward
version:             0.1.0.2
synopsis:            Set up port forwarding with the Private Internet Access
                     VPN service.
description:         Sets up and maintains a forwarded port.
license:             GPL-3
license-file:        LICENSE
author:              Echo Nolan
maintainer:          echo@echonolan.net
copyright:           Copyright 2015 Echo Nolan
category:            Network
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/enolan/pia-forward
bug-reports:         https://github.com/enolan/pia-forward/issues
extra-doc-files:     README.md

executable pia-forward
  main-is:             Main.hs
  build-depends:       aeson, base, bytestring,
                       data-default, directory,
                       filepath, http-client,
                       http-client-tls, network-info,
                       process, random, text,
                       text-format, time,
                       xdg-basedir
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  DefaultSignatures, DeriveDataTypeable, DeriveGeneric,
                       NamedFieldPuns, OverloadedStrings, ScopedTypeVariables
  ghc-options:         -Wall

source-repository head
  type:                git
  location:            https://github.com/enolan/pia-forward.git
